--- a/shard.yml
+++ b/shard.yml
@@ -2,6 +2,7 @@ name: elasticsearch-crystal
 version: 0.14
 authors:
   - Neeran Gul <paktek123@gmail.com>
+  - Mikhail Anisimov <miihael@gmail.com>
 
 description: |
   Elasticsearch API wrapper for Crystal Lang
